; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/extr_ps2_mouse.c_ps2_mouse_scroll_button_task.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/extr_ps2_mouse.c_ps2_mouse_scroll_button_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32, i32 }

@ps2_mouse_scroll_button_task.scroll_state = internal global i32 0, align 4
@ps2_mouse_scroll_button_task.scroll_button_time = internal global i32 0, align 4
@PS2_MOUSE_SCROLL_BTN_MASK = common dso_local global i32 0, align 4
@PS2_MOUSE_SCROLL_DIVISOR_V = common dso_local global i32 0, align 4
@PS2_MOUSE_SCROLL_DIVISOR_H = common dso_local global i32 0, align 4
@RELEASE_SCROLL_BUTTONS = common dso_local global i32 0, align 4
@PRESS_SCROLL_BUTTONS = common dso_local global i32 0, align 4
@PS2_MOUSE_SCROLL_BTN_SEND = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @ps2_mouse_scroll_button_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ps2_mouse_scroll_button_task(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %3 = load i32, i32* @PS2_MOUSE_SCROLL_BTN_MASK, align 4
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @PS2_MOUSE_SCROLL_BTN_MASK, align 4
  %8 = and i32 %6, %7
  %9 = icmp eq i32 %3, %8
  br i1 %9, label %10, label %46

10:                                               ; preds = %1
  %11 = load i32, i32* @ps2_mouse_scroll_button_task.scroll_state, align 4
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %10
  %14 = call i32 (...) @timer_read()
  store i32 %14, i32* @ps2_mouse_scroll_button_task.scroll_button_time, align 4
  store i32 1, i32* @ps2_mouse_scroll_button_task.scroll_state, align 4
  br label %15

15:                                               ; preds = %13, %10
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %25, label %20

20:                                               ; preds = %15
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %45

25:                                               ; preds = %20, %15
  store i32 2, i32* @ps2_mouse_scroll_button_task.scroll_state, align 4
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 2
  %28 = load i32, i32* %27, align 4
  %29 = sub nsw i32 0, %28
  %30 = load i32, i32* @PS2_MOUSE_SCROLL_DIVISOR_V, align 4
  %31 = sdiv i32 %29, %30
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 3
  store i32 %31, i32* %33, align 4
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* @PS2_MOUSE_SCROLL_DIVISOR_H, align 4
  %38 = sdiv i32 %36, %37
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 4
  store i32 %38, i32* %40, align 4
  %41 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 1
  store i32 0, i32* %42, align 4
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 2
  store i32 0, i32* %44, align 4
  br label %45

45:                                               ; preds = %25, %20
  br label %55

46:                                               ; preds = %1
  %47 = load i32, i32* @PS2_MOUSE_SCROLL_BTN_MASK, align 4
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = and i32 %47, %50
  %52 = icmp eq i32 0, %51
  br i1 %52, label %53, label %54

53:                                               ; preds = %46
  store i32 0, i32* @ps2_mouse_scroll_button_task.scroll_state, align 4
  br label %54

54:                                               ; preds = %53, %46
  br label %55

55:                                               ; preds = %54, %45
  %56 = load i32, i32* @RELEASE_SCROLL_BUTTONS, align 4
  ret void
}

declare dso_local i32 @timer_read(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
